--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,10 +4,16 @@ enable_plugins = amazon.aws.aws_ec2, aws_ssm, yaml, ini
 host_key_checking = False
 stdout_callback = yaml
 retry_files_enabled = False
+interpreter_python = auto_silent
 
 [inventory]
 cache = True
 cache_plugin = jsonfile
 cache_connection = .ansible_cache
 
+
+[privilege_escalation]
+become = True
+become_method = sudo
+become_ask_pass = False
 
